--- a/day04.html
+++ b/day04.html
@@ -8,6 +8,38 @@
 		 
 		<!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
 		<script src="https://cdn.staticfile.net/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
+		<script>
+			function clc(){
+				sal=document.getElementById("salay").value;
+				salnum=parseInt(sal);/*将字符变数字*/
+				ylgr=salnum*0.08;
+				ylgs=salnum*0.02;
+				ybgr=salnum*0.02;
+				ybgs=salnum*0.06;
+				sygr=salnum*0.005;
+				sygs=salnum*0.015;
+				gsgs=salnum*0.005;
+				ysgs=salnum*0.008;
+				ggjgr=salnum*0.12;
+				ggjgs=salnum*0.12;
+				grhj=ylgr+ybgr+sygr+ggjgr;
+				gshj=ylgs+ybgs+sygs+gsgs+ysgs+ggjgs;
+				ze=grhj+gshj;
+				document.getElementById("ylgr").innerText=ylgr;
+				document.getElementById("ylgs").innerText=ylgs;
+				document.getElementById("ybgr").innerText=ybgr;
+				document.getElementById("ybgs").innerText=ybgs;
+				document.getElementById("sygr").innerText=gsgs;
+				document.getElementById("sygs").innerText=sygs;
+				document.getElementById("gsgs").innerText=gsgs;
+				document.getElementById("ysgs").innerText=ysgs;
+				document.getElementById("ggjgr").innerText=ggjgr;
+				document.getElementById("ggjgs").innerText=ggjgs;
+				document.getElementById("grhj").innerText=grhj;
+				document.getElementById("gshj").innerText=gshj;
+				document.getElementById("ze").innerText=ze;
+			}
+		</script>
 	</head>
 	<body>
 		<div class="container text-center" >
@@ -18,7 +50,7 @@
 						工资</td>
 						<td colspan="3"><input  class="form-control type="text" id="salay" placeholder="请输入工资"/></td>
 						
-						<td><button class="btn btn-danger btn-block">计算</button></td>
+						<td><button onclick="clc()" class="btn btn-danger btn-block">计算</button></td>
 				</tr >
 				<tr class="bg-primary text-white">
 					<td>险种</td>
@@ -29,24 +61,24 @@
 				</tr>
 				<tr>
 					<td>养老</td>
-					<td>8%</td>
-					<td></td>
+					<td >8%</td>
+					<td id="ylgr"></td>
 					<td>20%</td>
-					<td></td>
+					<td id="ylgs"></td>
 				</tr>
 				<tr>
 					<td>医保</td>
 					<td>2%</td>
-					<td></td>
+					<td id="ybgr"></td>
 					<td>6%</td>
-					<td></td>
+					<td id="ybgs"></td>
 				</tr>
 				<tr>
 					<td>失业</td>
 					<td>0.5%</td>
-					<td></td>
+					<td id="sygr"></td>
 					<td>1.5%</td>
-					<td></td>
+					<td id="sygs"></td>
 					
 				</tr>
 				<tr>
@@ -54,32 +86,32 @@
 					<td></td>
 					<td></td>
 					<td>0.5%</td>
-					<td></td>
+					<td id="gsgs"></td>
 				</tr>
 				<tr>
 					<td>生育</td>
 					<td></td>
 					<td></td>
 					<td>0.8%</td>
-					<td></td>
+					<td id="ysgs"></td>
 				</tr>
 				<tr>
 					<td>公积金</td>
+					<td >12%</td>
+					<td id="ggjgr"></td>
 					<td>12%</td>
-					<td></td>
-					<td>12%</td>
-					<td></td>
+					<td id="ggjgs"></td>
 				</tr>
 				<tr>
 					<td>合计</td>
-					<td>个人合计</td>
-					<td></td>
-					<td>公司合计</td>
-					<td></td>
+					<td >个人合计</td>
+					<td id="grhj"></td>
+					<td >公司合计</td>
+					<td id="gshj"></td>
 				</tr>
 				<tr>
 					<td>总额</td>
-					<td colspan="4"></td>
+					<td colspan="4" id="ze"></td>
 				</tr>
 			</table>
 			
